# screen-sentry

./: CONFIGURATION.md  README.md  pyproject.toml
src/screen_sentry/: app.py  cli.py  context.py  ipc.py  main.py
src/screen_sentry/backends/: base.py  custom.py  openai_compat.py  registry.py
src/screen_sentry/config/: config.py  prompts.py  providers.py
src/screen_sentry/config/presets/: config.toml  providers.toml
src/screen_sentry/services/: analyze.py  screenshot.py  watch.py
src/screen_sentry/utils/: analysis_parser.py  toml.py
src/screen_sentry/views/: tray.py
