[project]
name = "screen-sentry"
version = "0.1.0"
description = "Screen-based threat detection tool"
readme = "README.md"
authors = [
  { name = "Slyverr", email = "90329317+Slyverr@users.noreply.github.com" },
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.1",
    "requests>=2.34.2",
]

[project.scripts]
screen-sentry = "screen_sentry.main:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "basic"
